took way too long to style input form correctly

--- a/massage-website-frontend/src/scss/components/_appointment-form.scss
+++ b/massage-website-frontend/src/scss/components/_appointment-form.scss
@@ -30,7 +30,7 @@
 
 .login-box .user-box input {
   width: 100%;
-  padding: 3px 0;
+  padding: 8px 0;
   font-size: 16px;
   color: black;
   margin-bottom: 30px;
@@ -45,7 +45,7 @@
   bottom: 0.8rem;
   left: 0;
   padding: 10px 5px;
-  font-size: 16px;
+  font-size: 20px;
   font-style: italic;
   pointer-events: none;
   transition: .5s;
@@ -83,6 +83,7 @@
 }
 
 .submit-button {
+  margin-top: 1em;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -92,11 +93,11 @@
 /* Date Picker Calendar */
 
 .date-wrapper {
-  display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-around;
   margin-top: 3em;
+  border-color: black;
 }
 
 .nice-dates-navigation, .nice-dates-day {
